--- a/.gitignore
+++ b/.gitignore
@@ -5,41 +5,79 @@
 *.swp
 .DS_Store
 .atom/
-.build/
 .buildlog/
 .history
 .svn/
-.swiftpm/
-migrate_working_dir/
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter/Dart
 .dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+.idea/
+.packages
+.project
+build/
+ios/Pods/
+ios/Flutter/App.framework
+ios/Flutter/engine.a
+ios/Flutter/flutter_assets/
+*.iml
+*.hprof
+*.keystore
+*.jks
 
-# Symbolication related
-app.*.symbols
+# Android
+.gradle/
+app/src/main/assets/flutter_assets/
+android/app/src/main/assets/flutter_assets/
+android/app/build/
+android/build/
+/android/key.properties
+/android/local.properties
+/android/app/google-services.json
 
-# Obfuscation related
-app.*.map.json
+# iOS
+/ios/Flutter/Generated.xcconfig
+/ios/Runner/GeneratedPluginRegistrant.h
+/ios/Runner/GeneratedPluginRegistrant.m
+/ios/Runner.xcworkspace/contents.xcworkspacedata
+/ios/Runner.xcworkspace/xcshareddata/
+/ios/Runner.xcodeproj/project.xcworkspace/
+/ios/Runner.xcodeproj/xcuserdata/
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Windows
+/windows/flutter/ephemeral
+/windows/flutter/generated_plugin_registrant.cc
+/windows/flutter/generated_plugin_registrant.h
+/windows/flutter/generated_plugins.cmake
+/windows/CMakeLists.txt.user
+/windows/runner/Debug/
+/windows/runner/Release/
+/windows/runner/Profile/
+/windows/runner/flutter_assets/
+/windows/runner/generated_plugin_registrant.cc
+/windows/runner/generated_plugin_registrant.h
+/windows/runner/generated_plugins.cmake
+/windows/vs.gdb.v8.json
+.vs/
+
+# Linux
+/linux/flutter/ephemeral
+/linux/flutter/generated_plugin_registrant.cc
+/linux/flutter/generated_plugin_registrant.h
+/linux/flutter/generated_plugins.cmake
+/linux/CMakeLists.txt.user
+/linux/main.cc.d
+/linux/flutter_assets/
+
+# macOS
+/macos/Flutter/ephemeral
+/macos/Flutter/Generated.xcconfig
+/macos/Flutter/GeneratedPluginRegistrant.swift
+/macos/Pods/
+/macos/Runner.xcworkspace/
+/macos/firebase_app_id_file.json
+/macos/Flutter/flutter_assets/
+
+# Web
+/web/flutter_bootstrap.js
+/web/flutter_bootstrap.js.map
+
