--- a/.gitignore
+++ b/.gitignore
@@ -82,4 +82,22 @@ android/build/
 /web/flutter_bootstrap.js.map
 
 # hata düzeltildikten sonra kaldırılmalı 
+# ekleme
+.build/
+.swiftpm/
+migrate_working_dir/
+*.iml
+*.ipr
+*.iws
+.idea/
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.flutter-plugins
 .flutter-plugins-dependencies
+.pub-cache/
+.pub/
+app.*.symbols
+app.*.map.json
+/android/app/debug
+/android/app/profile
+/android/app/release
